--- a/ZapWeb/Public/lib/pillar/ui/statusstrip/statusstrip.css
+++ b/ZapWeb/Public/lib/pillar/ui/statusstrip/statusstrip.css
@@ -5,7 +5,8 @@
     width: 100%;
     outline: 1px solid #c9c9c9;
     border-top: 1px solid #fff;
-    padding-right: 20px;
+    padding-right: 20px;    
+    z-index: 99;
 }
 
 .status-strip-right{
